; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_edit.c_get_nolist_virtcol.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_edit.c_get_nolist_virtcol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i64 }

@curwin = common dso_local global %struct.TYPE_2__* null, align 8
@p_cpo = common dso_local global i32 0, align 4
@CPO_LISTWM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @get_nolist_virtcol to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_nolist_virtcol() #0 {
  %1 = alloca i32, align 4
  %2 = load %struct.TYPE_2__*, %struct.TYPE_2__** @curwin, align 8
  %3 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %2, i32 0, i32 2
  %4 = load i64, i64* %3, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %15

6:                                                ; preds = %0
  %7 = load i32, i32* @p_cpo, align 4
  %8 = load i32, i32* @CPO_LISTWM, align 4
  %9 = call i32* @vim_strchr(i32 %7, i32 %8)
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %6
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @curwin, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  %14 = call i32 @getvcol_nolist(i32* %13)
  store i32 %14, i32* %1, align 4
  br label %20

15:                                               ; preds = %6, %0
  %16 = call i32 (...) @validate_virtcol()
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** @curwin, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  store i32 %19, i32* %1, align 4
  br label %20

20:                                               ; preds = %15, %11
  %21 = load i32, i32* %1, align 4
  ret i32 %21
}

declare dso_local i32* @vim_strchr(i32, i32) #1

declare dso_local i32 @getvcol_nolist(i32*) #1

declare dso_local i32 @validate_virtcol(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
